--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.19.1",
+    "@types/express": "^5.0.3",
+    "express": "^5.1.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
