working mcp access

--- a/mcp-consumer/package.json
+++ b/mcp-consumer/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
     "@modelcontextprotocol/sdk": "^1.19.1",
-    "ai": "^5.0.60"
+    "ai": "^5.0.60",
+    "dotenv": "^17.2.3"
   }
 }
